# RayTracing-in-a-weekend

./: .gitignore  .gitmodules  README.md
.github/workflows/: rust.yml
C++/: CMakeLists.txt  main.cpp  vector_test.cpp
C++/headers/: RGB.h  defines.h  external_includes.h  hit.h  materials.h  ppm_writer.h  ray.h  scene.h  sphere.h  tests.h  vec3.h  viewport.h
C++/src/: RGB.cpp  hit.cpp  materials.cpp  ppm_writer.cpp  ray.cpp  sphere.cpp  tests.cpp  vec3.cpp  viewport.cpp
Rust/: Cargo.toml  cerr  heaptrack.ray_tracing_rust.103096.zst  heaptrack.ray_tracing_rust.95971.zst  perf.data  perf.data.old  stderr  test.ppm  test_c.ppm
Rust/src/: main.rs  objects.rs  texture.rs  vec3.rs  viewport.rs  write_img.rs
Rust/src/objects/: aabb.rs  instance.rs  materials.rs  onb.rs  quad.rs  sphere.rs
Rust/src/objects/aabb/: aabb.rs  iaabb.rs  qaabb.rs
Rust/src/objects/objects/: materials.rs  tests.rs
Rust/src/viewport/: camera_tests.rs  glass_tests.rs  json_tests.rs  material_tests.rs  ray_color.rs  texture_test.rs
Rust/src/viewport/viewport/: camera_tests.rs  glass_tests.rs  json_tests.rs  material_tests.rs  texture_test.rs
Rust2/: .gitignore  Cargo.toml
Rust2/src/: main.rs  objects.rs  onb.rs  postprocessing.rs  quaternions.rs  rotation.rs  tests.rs  vec3.rs  viewport.rs  write_img.rs
Rust2/src/objects/: aabb.rs  hit.rs  instance.rs  material.rs  quad.rs  sphere.rs  texture.rs  triangle.rs
Rust2/src/tests/: material_tests.rs
Zig/: build.zig  stderr.out
Zig/src/: color.zig  img_writer.zig  main.zig  materials.zig  object.zig  ray.zig  sphere.zig  viewport.zig
(+3 files in other folders)
