[package]
name = "ray_tracing_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
image = "*"
indicatif = "*"
json = "0.12.4"
tokio = {version = "1.32.0", features = ["full"] }
futures = "0.3.28"
glob = "0.3.1"


[profile.profiling]
debug = 1
